src/objects/Merchandise__c.object
<CustomObject>
    <fields>
        <fullName>Allow_Orders_for_Sold_Out_Items__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Orders for Sold Out Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Display_Sizes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Sizes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_Shipping_Cost__c</fullName>
        <label>Estimated Shipping Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Free_Merchandise__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Free Merchandise</label>
        <referenceTo>Merchandise__c</referenceTo>
        <relationshipLabel>Merchandise</relationshipLabel>
        <relationshipName>Merchandise</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Omit_from_Store__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Omit from Store</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Picture__c</fullName>
        <label>Picture</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Point_Value__c</fullName>
        <label>Point Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Merchandise</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Point_Value__c</columns>
        <columns>Cost__c</columns>
        <columns>Estimated_Shipping_Cost__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Merchandise</fullName>
        <columns>NAME</columns>
        <columns>Cost__c</columns>
        <columns>Estimated_Shipping_Cost__c</columns>
        <columns>Point_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Merchandise</label>
        <sharedTo>
            <role>Administrator</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Merchandise Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merchandise</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Free_Merchandise_Should_Not_Omit</fullName>
        <active>true</active>
        <errorConditionFormula>Free_Merchandise__r.Omit_from_Store__c == true</errorConditionFormula>
        <errorMessage>Free Merchandise should not be omit from store</errorMessage>
    </validationRules>
</CustomObject>